# Physical-AI-Humanoid-Robotics-Textbook

./: .gitignore  .npmignore  .qdrant_ingestion_state.json  .vercelignore  CLAUDE.md  DOCUMENTATION_INDEX.md  DOCUSAURUS_CONTEXT_FIX_SUMMARY.md  GEMINI.md  README.md  contentguide.md  docusaurus.config.ts  error.txt  exp.py  jest.config.js  lighthouserc.js  package.json  playwright.config.ts  prompt.txt  pyproject.toml  requirements.txt  sidebars.ts  summary.md  tailwind.config.js  test_qdrant_full.py  test_tools_e2e.py  vercel.json
.claude/: settings.local.json
.claude/agents/: context7-docs-integrator.md
.claude/commands/: sp.implement.md  sp.plan.md
.vercel/: project.json
api/: index.py  pyproject.toml  requirements.txt
api/oauth/: callback.ts
api/utils/: auth.py  config.py  database.py  helpers.py  logging.py  models.py  sql_models.py  tools.py
auth-service/: .dockerignore  DEPLOYMENT.md  Dockerfile  package.json  tsconfig.json  vercel.json
blog/: 2025-12-06-book-creation-summary.md  authors.yml  tags.yml
docs/: docusaurus.config.ts  intro.mdx  lighthouserc.js  package-lock.json  package.json
docusaurus-book/: docusaurus.config.ts  package.json
scripts/: generate-book-structure.sh  import-content.sh  ingest_qdrant.py  translate-blog-to-urdu.js  translate-categories-to-urdu.js  translate-to-urdu.js
specs/: 001-fix-session-auth.md  00X-docusaurus-context-ssg-guide.md  00X-session-based-auth.md
tests/: setup.ts
textbook/: .gitignore  .npmignore  README.md  docusaurus.config.ts  lighthouserc.js  package.json  sidebars.ts  tailwind.config.js
(+465 files in other folders)
